# tencentcloud-django-plugin-cos

./: .python-version  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
django_cos_storage/: __init__.py  file.py  storage.py
tests/: conftest.py  django_settings.py  test_file.py  test_storage.py
